[tool.poetry]
name = "cled-imports"
version = "0.1.0"
description = ""
authors = ["Leonardo Bezerra <leosoares.bezerra2017@gmail.com>"]
readme = "README.md"
packages = [{include = "cled_imports"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
jsons = "^1.6.3"
mangum = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
